docs: Swagger에 표지 이미지 설명 추가
- coverImage 필드에 상세한 설명 추가
- 예제 URL 추가 (알라딘 이미지)
- format: uri 속성 추가
- Swagger JSON 재생성
