# public/swagger.json
@@ -77,7 +77,9 @@
           },
           "coverImage": {
             "type": "string",
-            "description": "표지 이미지 URL"
+            "description": "표지 이미지 URL (알라딘 제공, 다양한 크기 지원)",
+            "example": "https://image.aladin.co.kr/product/3408/36/coversum/8966260950_2.jpg",
+            "format": "uri"
           },
           "categoryName": {
             "type": "string",
